# warrenlanchonete

./: README.md  docker-compose.prod.yml  docker-compose.yml
warren-backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
warren-backend/app/: config.py  dependencies.py  exceptions.py  logging_config.py  main.py  metrics.py
warren-backend/app/db/: import_fundamentals.py  seed.py  session.py
warren-backend/app/models/: company.py  financial.py
warren-backend/app/rag/: client.py  ingest.py
warren-backend/app/routers/: companies.py  portfolio.py
warren-backend/buffett_letters/: 1978.html  1979.html  1980.html  1982.html  1983.html  1985.html  1986.html  1987.html  1988.html  1989.html  1990.html  1991.html  1992.html  1993.html  1994.html  1995.html  1996.html  1998.html  1999.html  2002.html
warren-backend/docker/: entrypoint.sh
warren-backend/docs/: ARCHITECTURE.md  e2e-test-report.md  tasks.md
warren-backend/migrations/: env.py
warren-backend/templates/: report.html
warren-backend/tests/: conftest.py  test_config.py  test_exceptions.py  test_main.py
warren-ingestion/: .env.example  .gitignore  AGENTS.md  Dockerfile  pyproject.toml
warren-ingestion/docs/: b3_tickers_ingestion_plan.md
warren-ingestion/tests/: test_b3.py  test_exporters.py  test_fetching.py  test_file_readers.py  test_fundamentals.py  test_validation.py
warren-ingestion/warren_ingestion/: __init__.py  b3.py  cli.py  exporters.py  fetching.py  file_readers.py  fundamentals.py  models.py  normalization.py  validation.py
(+49 files in other folders)
