[project]
name = "warren-ingestion"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "scrapy",
    "psycopg2-binary",
    "sqlalchemy",
    "python-dotenv",
    "pytest",
]

[project.scripts]
warren-ingestion = "warren_ingestion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
